# project_sidr

./: .gitignore  BENCHMARK_REPORT.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  QUANTUM_ADVANCED_TEST_REPORT.md  QUANTUM_SIMPLE_TEST_REPORT.md  QUICKSTART.md  QUICK_START.md  README.md  REBUILD.bat  SUMMARY.md  USER_GUIDE.md  VPS_CHAIN_SETUP.md  XRAY_CORE_QUANTUM_INTEGRATION.md  XTLS_REALITY_SPECIFICATION.md  build.bat  build.sh  build_exe.bat  build_full_client.bat  deploy.sh  deploy_vps_auto.sh  start.sh  АВТОЗАПУСК.bat  ЗАПУСК.bat  ЗАПУСК_БЕЗ_EXE.md  КРАТКАЯ_ИНСТРУКЦИЯ.md  ЧИТАЙ_МЕНЯ.txt
benchmarks/: performance_benchmarks.cpp
configs/: blacklist_services.yaml  chain_config.json  client_config.json  config.json  config.yaml  country_bypass.yaml  entry.yaml  exit.yaml  monitoring_config.json  netherlands_exit.yaml  quantum_client_config.json  russia_entry.yaml  server.yaml  simple_monitoring.json  telegram_bypass.yaml  whitelist_services.yaml
configs/services/: blacklist_sni.txt  ip_ranges.txt  russian_whitelist_ips.txt  whitelist_sni.txt
cpp/: CMakeLists.txt  adaptive_masking_engine.h  ip_whitelist_scanner.cpp  ip_whitelist_scanner.h  main_nextgen.cpp  neural_tunnel.cpp  neural_tunnel.h  neural_tunnel_client.cpp  neural_tunnel_server.cpp  probe_engine.cpp  probe_engine.h  quantum_crypto.cpp  quantum_crypto.h  quantum_masking.cpp  quantum_masking.h  quantum_vpn_server.cpp  vless_protocol.cpp  vless_protocol.h  xtls_reality_core.cpp  xtls_reality_core.h
cpp/core/: CMakeLists.txt  ai_analyzer.cpp  ai_analyzer.h  bypass_detection.cpp  bypass_detection.h  connection_manager.cpp  connection_manager.h  dns_tunneling.cpp  dns_tunneling.h  dynamic_sni.cpp  dynamic_sni.h  engine.cpp  hysteria_integration.cpp  hysteria_integration.h  main.cpp  reverse_tunnel.cpp  reverse_tunnel.h  s3_api_integration.cpp  s3_api_integration.h  trafficmask_nextgen.cpp  trafficmask_nextgen.h  trojan_integration.cpp  trojan_integration.h  vps_cdn_chain.cpp  vps_cdn_chain.h
cpp/include/: trafficmask.h
cpp/signature/: CMakeLists.txt  encrypted_protocol_maskers.h  enhanced_vk_tunnel.h  ip_sidr_masker.h  reality_masker.h  russia_maskers.h  signature_engine.cpp  signature_engine.h  sni_masker.h  vless_masker.h  whitelist_scanner.h
cpp/traffic/: CMakeLists.txt  traffic_processor.cpp  traffic_processor.h
deploy/: install_xtls_reality.sh
docs/: ENHANCED_FEATURES.md  RUSSIA_FEATURES.md  SNI_IP_SIDR_FEATURES.md  USAGE.md  VLESS_INTEGRATION.md  WEB_PANEL.md
examples/: advanced_features_complete_demo.py  advanced_features_demo.py  api_demo.py  russia_features_demo.py  vless_demo.py
go/: go.mod
go/client/: client.go  main.go
go/server/: main.go
monitoring/: quantum_monitor.py
security/: quantum_security_audit.cpp
web/panel/: INSTALL_GO.md  LAUNCH_GUIDE.md  QUICK_START.md  README.md  bypass_interface.html  demo.html  go.mod  index.html  main.go  start_panel.bat  start_panel.ps1  start_panel.sh  start_panel_gitbash.sh  start_panel_universal.sh
windows/client/: quantum_vpn_full.cpp
